android xml recyclerview optimised

--- a/Mobile/Android/StudyXML/app/src/main/res/values/strings.xml
+++ b/Mobile/Android/StudyXML/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">StudyXML</string>
+    <string name="bottom_navi_item1">item1</string>
+    <string name="bottom_navi_item2">item2</string>
 </resources>
